fix: Add correct padding to the .solr-filters on mobile so it is not hidden behind the topbar Ticket: https://support.dfau.de/#ticket/zoom/18489

--- a/src/styles/elements/_solr-filters.css
+++ b/src/styles/elements/_solr-filters.css
@@ -8,4 +8,10 @@
     .solr-filters[is-visible] {
         --solr-filters-bg-color: var(--bg-color);
     }
+
+    @media screen and (width < 840px) {
+        .solr-filters {
+            padding-top: calc(var(--topbar-height) + var(--spacing-normal));
+        }
+    }
 }
